Amost finished responsive UI, jumping menu and pics left to fix

--- a/styles.css
+++ b/styles.css
@@ -17,94 +17,15 @@ img {
 h1, h2{
 	margin: 0;
 }
-@media only screen and (min-width: 640px) {
-	#navbar a {
-		display: none;
-	}
-	#banner {
-		width: 100%;
-		height: 50vw;
-		background-color: #14aec1;
-		/*display: inline-block;*/
-	}
-	#banner a {
-		display: inline-block;
-		color: #ebebeb;
-		font-size: 48pt;
-		/*vertical-align: middle;*/
-		text-decoration: none;
-		margin: 2em 0 0 1em;
-		transition: all 0.3s; /*cubic-bezier(.25,.8,.25,1);*/
-	}
-	#banner a:hover {
-		color: #122d30;	
-	}
-	#banner h2 {
-		display: inline-block;
-		font-size: 36pt;
-		margin: 0.5em 0 0 1.3em;
-		color: rgba(18, 45, 48, 0.7);
-	}
-	.text-box {
-		display: inline-flex;
-		justify-content: flex-start;
-		height: 25vw;
-		margin: 0;
-		font-size: 36pt;
-	}
-	#text-left {
-		width: 75%;
-		background-color: #27212c;
-		justify-content: center;
-		display: inline-flex;
-		align-items: center;
-		color: #9383a1;
-	}
-	#text-right {
-		width: 25%;
-		background-color: #bc3183;
-		justify-content: center;
-		display: inline-flex;
-		align-items: center;
-		float: right;
-	}
-	#text-right a { 	
-		text-decoration: none;
-		color: #fff;
-		transition: all 0.3s;
-	}
-	#text-right a:hover {
-		color: #9383a1;	
-	}
-	#pic-block {
-		display: inline-flex;
-	    height: auto;
-	    width: 100%;
-	    justify-content: flex-start;
-	}
-	#pic-block img {
-		display: inline;
-		margin: 0;
-	}
-	#text-block {
-		height: 500px;
-		width: 100%;
-		background-color: #ebebeb;
-		display: inline-block;
-	}
-	#text-block-inner {
-		margin: 70px
-	}
-	#text-block h1 {
-		/*margin-left: 30px;*/
-		font-size: 48pt;
-		color: #088ca5;
-	}
+#container {
+	max-width: 1024px;
+	margin: auto;
 }
-@media only screen and (min-width: 1024px) { 
+/*@media only screen and (min-width: 1024px) { */
 	#navbar {
 		width: 100%;
 		height: 14vh;
+		max-height: 90px;
 		display: inline-block;
 		background-color: #373c3f;
 	}
@@ -120,19 +41,28 @@ h1, h2{
 		color: #9e9e9e;
 		/*z-index: 10;*/	
 	}
+	.mobile-menu {
+		display: none;
+	}
+	.mini-menu {
+		display: none;
+	}
 	#banner {
 		width: 100%;
 		height: 50vw;
+		max-height: 512px;
 		background-color: #14aec1;
+		display: flex;
+		align-items: center;
 		/*display: inline-block;*/
 	}
 	#banner a {
 		display: inline-block;
 		color: #ebebeb;
-		font-size: 48pt;
+		font-size: 36pt;
 		/*vertical-align: middle;*/
 		text-decoration: none;
-		margin: 2em 0 0 1em;
+		margin-left: 1em;
 		transition: all 0.3s; /*cubic-bezier(.25,.8,.25,1);*/
 	}
 	#banner a:hover {
@@ -140,16 +70,17 @@ h1, h2{
 	}
 	#banner h2 {
 		display: inline-block;
-		font-size: 36pt;
+		font-size: 30pt;
 		margin: 0.5em 0 0 1.3em;
 		color: rgba(18, 45, 48, 0.7);
 	}
 	.text-box {
-		display: inline-flex;
+		display: flex;
 		justify-content: flex-start;
 		height: 25vw;
+		max-height: 300px;
 		margin: 0;
-		font-size: 36pt;
+		font-size: 30pt;
 	}
 	#text-left {
 		width: 75%;
@@ -157,6 +88,7 @@ h1, h2{
 		justify-content: center;
 		display: inline-flex;
 		align-items: center;
+		/*flex: 4 1;*/
 		color: #9383a1;
 	}
 	#text-right {
@@ -165,6 +97,7 @@ h1, h2{
 		justify-content: center;
 		display: inline-flex;
 		align-items: center;
+		/*flex: 1.1 4;*/
 		float: right;
 	}
 	#text-right a { 	
@@ -176,27 +109,68 @@ h1, h2{
 		color: #9383a1;	
 	}
 	#pic-block {
-		display: inline-flex;
-	    height: auto;
-	    width: 100%;
-	    justify-content: flex-start;
+	    display: flex;
+    	flex-flow: row nowrap;
 	}
 	#pic-block img {
 		display: inline;
 		margin: 0;
 	}
-	#text-block {
-		height: 500px;
-		width: 100%;
+	.text-block {
 		background-color: #ebebeb;
-		display: inline-block;
+		padding: 40px;
 	}
-	#text-block-inner {
-		margin: 70px
-	}
-	#text-block h1 {
-		/*margin-left: 30px;*/
-		font-size: 48pt;
+	.text-block h1 {
+		font-size: 36pt;
 		color: #088ca5;
 	}
+	.text-block p {
+		color: #515151;
+		flex: 1 1 400px;
+		text-align: justify;
+		padding: 0;
+		margin: 15px;
+	}
+	.text-block-inner {
+		display: flex;
+		flex-flow: row wrap;
+	}
+
+@media only screen and (max-width: 640px), only screen and (max-device-width: 640px) {
+	#navbar a {
+		display: none;
+	}
+	#navbar {
+		display: flex;
+		justify-content: space-between;
+	}
+	.mobile-menu {
+		display: inline-block;
+		color: #ebebeb;
+		margin: 2rem 2vh;
+	}
+	.mini-menu {
+		display: block;
+		padding: 20px;
+		font-size: 38px;
+		color: #ebebeb;
+	}
+	#pic-block {
+	    display: flex;
+    	flex-flow: column nowrap;
+    }
+    #banner a {
+		font-size: 24pt;
+		/*margin: 3rem 0 0 1em;*/
+	}
+	#banner h2 {
+		font-size: 18pt;
+	}
+	.text-block-inner {
+		flex-flow: column wrap;
+	}
+	.text-block p {
+		flex: 0 0 auto;
+	}
+
 }
